--- a/flink-filesystems/flink-oss-fs-hadoop/pom.xml
+++ b/flink-filesystems/flink-oss-fs-hadoop/pom.xml
@@ -29,7 +29,7 @@ under the License.
 	<name>Flink : FileSystems : OSS FS</name>
 
 	<properties>
-		<fs.oss.sdk.version>3.17.0</fs.oss.sdk.version>
+		<fs.oss.sdk.version>3.4.1</fs.oss.sdk.version>
 	</properties>
 
 	<dependencies>
@@ -55,7 +55,7 @@ under the License.
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-aliyun</artifactId>
-			<version>3.4.0-SNAPSHOT</version>
+			<version>${fs.hadoopshaded.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.aliyun.oss</groupId>
